--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,6 +19,7 @@ brews:
     tap:
       owner: kazeburo
       name: homebrew-tap
+      token: ${{ secrets.CR_PAT }}
     homepage: "https://github.com/kazeburo/git-version-next"
     install: |
       bin.install "git-version-next"
